task(frontend): changed top distance for sticky elements

--- a/frontend/src/features/tasks/components/AddTaskForm/index.module.css
+++ b/frontend/src/features/tasks/components/AddTaskForm/index.module.css
@@ -4,6 +4,8 @@
     border-radius: 5px;
     padding: 5px;
     margin-bottom: 15px;
+    position: sticky;
+    top: 75px;
 }
 .add_task_form input[type="text"] {
     width: 100%;
