--- a/frontend/src/features/tasks/components/AddTaskForm/index.module.css
+++ b/frontend/src/features/tasks/components/AddTaskForm/index.module.css
@@ -1,32 +1,34 @@
 .add_task_form {
     display: flex;
-    background-color: #fff9;
-    border-radius: 5px;
+    background-color: #fff1;
+    border-radius: 7.5px;
     padding: 5px;
     margin-bottom: 15px;
     position: sticky;
     top: 75px;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 .add_task_form input[type="text"] {
     width: 100%;
-    padding: 10px;
+    padding: 13px 10px;
     border: unset;
     font-size: 18px;
-    border-radius: 5px 0 0 5px;
+    border-radius: 5px;
+    background: #c2c2c211;
+    color: #fff;
 }
-
-.add_task_form select {
-    border-radius: 0 5px 5px 0;
-    border: unset;
-    border-left: 1px solid #0003;
-    padding: 10px;
+.add_task_form input[type="text"]:focus-visible,
+.add_task_form input[type="submit"]
+ {
+outline: none;
 }
 
 .add_task_form input[type="submit"] {
     padding: 10px 20px;
-    margin-left: 15px;
     border: unset;
     border-radius: 5px;
-    background: #181818;
-    color: #fff;
+    background: #ffffff;
+    color: #000;
+    margin-left: 5px;
 }
