--- a/frontend/src/features/tasks/components/TaskItem/index.module.css
+++ b/frontend/src/features/tasks/components/TaskItem/index.module.css
@@ -1,10 +1,9 @@
-
 .task {
     display: flex;
     flex-direction: column-reverse;
     align-items: start;
     gap: 15px;
-    background-color: #171717;
+    background-color: #17171766;
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 15px;
@@ -36,7 +35,7 @@
 }
 
 .title_container select {
-    background: #2a2a2a;
+    background: transparent;
     border-radius: 5px;
     margin-left: 10px;
     padding: 5px;
@@ -62,7 +61,7 @@
 }
 .task_actions label {
     color: #afafaf;
-    background: #363636;
+    background: #3636364d;
     padding: 8px 15px;
     border-radius: 9999px;
     display: flex;
@@ -71,6 +70,7 @@
     gap: 5px;
     cursor: pointer;
     user-select: none;
+    border: .5px solid #fff3;
 }
 .task_actions label input[type="checkbox"] {
     accent-color: #fff;
@@ -79,7 +79,7 @@
 }
 
 .task_action_delete {
-    background: #343434;
+    background: #34343440;
     border: unset;
     display: flex;
     align-items: center;
@@ -87,6 +87,7 @@
     height: 35px;
     width: 35px;
     border-radius: 50%;
+    border: .5px solid #fff2;
 }
 
 .task_action_delete svg path {
