task(frontend): components styling update

--- a/frontend/src/Pages/Homepage/index.module.css
+++ b/frontend/src/Pages/Homepage/index.module.css
@@ -5,3 +5,8 @@
     grid-template: auto / 300px 1fr;
     margin-inline: auto;
 }
+.content_left {
+    height: fit-content;
+    position: sticky;
+    top: 75px;
+}
