--- a/frontend/src/features/tasks/components/TaskItem/index.module.css
+++ b/frontend/src/features/tasks/components/TaskItem/index.module.css
@@ -60,22 +60,30 @@
     justify-content: space-between;
 }
 .task_actions label {
-    color: #afafaf;
-    background: #3636364d;
-    padding: 8px 15px;
-    border-radius: 9999px;
+    color: #ffffff;
+    background: #00000021;
+    padding: 5px 10px;
+    border-radius: 7.5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 10px;
     cursor: pointer;
     user-select: none;
-    border: .5px solid #fff3;
+    border: .5px solid #fff1;
+    font-weight: 400;
+    font-size: 14px;
 }
-.task_actions label input[type="checkbox"] {
-    accent-color: #fff;
-    width: 15px;
-    height: 15px;
+.task_actions label select {
+    background-color: #2f2f2f40;
+    color: #fcfcfc;
+    padding: 7px 5px 7px 10px;
+    border-radius: 9999px;
+    font-size: 12px;
+    border: unset;
+}
+.task_actions label select:focus-visible {
+    outline: none;
 }
 
 .task_action_delete {
